# NLP

./: Readme.md
assignment 1/: main.ipynb  pyproject.toml
assignment2/: main1.ipynb  pyproject.toml
assignment3/: assignment3_sample_finish4.ipynb
