[tool.poetry]
name = "assignment 1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
gensim = "^4.3.3"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
gdown = "^5.2.0"
nltk = "^3.9.1"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
