[project]
name = "assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "opencc>=1.1.9",
    "pandas>=2.2.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "torch>=2.5.0",
    "tqdm>=4.66.5",
]
